# jotunn

./: .dockerignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: release.yml
examples/audio/: segment_audio.py  transcription.py  vad.py
examples/code/: longlines.py
examples/image/: aesthetic_score.py  blur_score.py  brightness_score.py  caption_image.py  clarity_score.py  classifier.py  deduplication.py  embedding.py  entropy_score.py  exposure_score.py  file_size.py  image_hashes.py  image_resolution.py  image_rotation.py  image_size.py  intensive_text.py  low_constrast.py  near_hash_deduplication.py  nsfw_image.py  pdf2image.py  resize_image.py  saturation_score.py  tagger.py  usearch_embed_deduplication.py  usearch_hash_deduplication.py  watermark_detection.py  watermark_image.py
examples/pipeline/: test_pipeline_image.py  test_pipeline_text.py
examples/similarity/: image_text_similarity.py
examples/text/: alphanumeric.py  classify_text.py  digit.py  embed_text.py  long_words.py  refusals.py  text_length.py  text_segmentation.py  token_length.py
examples/video/: cotracker.py  optical_flow.py  transnetv2.py  video_duration.py  video_frame_extraction.py  video_segmentation.py  video_stats.py
src/jotunn/: __init__.py
src/jotunn/clients/: anyscale.py
src/jotunn/components/: base.py  distributed_base.py
src/jotunn/components/audio/: segment_audio.py  transcription.py  vad.py
src/jotunn/components/code/: filters.py
src/jotunn/functions/: functions.py
src/jotunn/models/: transnetv2.py
src/jotunn/utils/: prompt_templates.py
src/teraflopai_data/models/: laion.py
src/utils/: validate_files.py
tests/: test.py
(+45 files in other folders)
